# Celeste-LLM-Learning

./: README.md
AutoGenTest/: __init__.py  pyproject.toml
AutoGenTest/ExampleWorkflow/: __init__.py  agents.py  main.py  tools.py
AutoGenTest/my-app/: database.sqlite
FirstAgent/: .env  README.md  main.py  pyproject.toml
FirstAgent/src/: tools.py
HelloAgent/: main.py  pyproject.toml
HelloAgent/agents/: react_agent.py  simple_agent.py
HelloAgent/core/: agent.py  config.py  llm.py
HelloAgent/tools/: base.py  registry.py
HelloAgent/tools/builtin/: calculator.py
