[project]
name = "autogentest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.10.1",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[openai]>=0.7.5",
    "autogenstudio>=0.1.5",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.3",
    "arxiv>=2.1.3",
    "python-dotenv>=1.2.1",
]
